# hightower-pos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fabric_outbox.py  0003_customer_attach.py  0004_till_sessions.py
desktop_client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
desktop_client/src/: App.tsx  main.tsx
desktop_client/tests/: App.test.tsx  AttachCustomerModal.test.tsx  BookmarkPane.test.tsx  Cart.test.tsx  CashTenderModal.test.tsx  ChangePasswordScreen.test.tsx  CloseTillModal.test.tsx  LoginScreen.test.tsx  Modal.test.tsx  OpenTillModal.test.tsx  PayPanel.test.tsx  PaymentInFlight.test.tsx  PaymentResult.test.tsx  (+16 more)
docs/: cashier-runbook.md
pos_service/: __main__.py  auth.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
print_agent/: .env.example  README.md  agent.py  config.py  escpos_client.py  install.bat  requirements.txt  start_print_agent.bat  tray.py
tests/: conftest.py  test_admin.py  test_admin_fabric_outbox.py  test_admin_users.py  test_auth.py  test_checkout.py  test_customers.py  test_fabric_client.py  test_fabric_outbox.py  test_fabric_price_sync.py  test_health.py  test_health_dependencies.py  test_idempotency.py  test_items.py  test_pricing.py  test_receipt.py  test_reconciliation.py  test_refund.py  test_sentry_client.py  test_till.py  test_windcave_client.py
(+73 files in other folders)
