[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pos-service"
version = "0.1.0"
description = "AvidMax in-store retail POS backend service"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Hightower Systems" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "bcrypt>=4.1",
  "httpx>=0.27",
  "lxml>=5.1",
  "structlog>=24.1",
  "python-multipart>=0.0.9",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.3",
]

[project.scripts]
pos-service = "pos_service.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pos_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.File",
  "fastapi.Form",
  "typer.Argument",
  "typer.Option",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
